# wikidata-version-update

./: .gitignore  LICENSE  README.md  pyproject.toml
wikidata_update/: __init__.py  __main__.py
